k3s_cluster/base/dmz/media/kapowarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-kapowarr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-kapowarr
  ports:
    - name: web
      protocol: TCP
      port: 6658
      targetPort: 5656
