k3s_cluster/base/dmz/media/kapowarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-kapowarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`kapowarr.media.dmz.home`)
      # middlewares:
      #   - name: dmz-media-middleware-auth-authentik
      services:
        - name: dmz-media-kapowarr-service
          port: 6658
          #tls: {}
